Fixed resize separator visible above sticky column header

--- a/forms-flow-theme/scss/v8-scss/_table.scss
+++ b/forms-flow-theme/scss/v8-scss/_table.scss
@@ -263,3 +263,6 @@ $table-shadow: rgba(0, 0, 0, 0.25); // Shadow color
   .custom-table-wrapper-outter-submissions{
     container: tableSize / inline-size;
   }
+  .MuiDataGrid-columnSeparator--resizable{
+    z-index: 2!important;
+  }
